[project]
name = "turbo-carnival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "litellm>=1.74.0",
    "python-dotenv>=1.1.1",
    "llama-index>=0.12.47",
    "llama-index-llms-azure-openai>=0.3.4",
    "langchain-ollama>=0.3.3",
    "llama-index-llms-litellm>=0.5.1",
]
